Fix color contrast ratio for buttons

--- a/assests/css/mobile.css
+++ b/assests/css/mobile.css
@@ -287,7 +287,7 @@ button {
   padding: 12px;
   gap: 10px;
   height: 48px;
-  background: #ff6b00;
+  background: #943E00;
   font-family: Inter, sans-serif;
   font-style: normal;
   font-weight: 700;
